tests/ui/parser/issues/issue-108242-semicolon-recovery.rs
fn foo() {}
fn main() {
    foo(;
    foo(;
} //~ ERROR mismatched closing delimiter
